# rpgrep

./: .gitignore  Cargo.toml  README.md  deny.toml  rpgrep-exclude-vendor.patch
.github/workflows/: ci.yml  release.yml
benches/: pipeline.rs
docs/: LANGUAGES_ROADMAP.md  LLM_INTEGRATION.md  VALIDATION.md
examples/: build_demo_index.rs
mnt/user-data/outputs/rpgrep/src/embed/: mod.rs
rpgrep-v0.2.9-aarch64-apple-darwin/: LICENSE-MIT
scripts/: bench_compare.sh  release.sh
src/: cli.rs  lib.rs  main.rs  serve.rs
src/chunk/: mod.rs
src/embed/: mod.rs
src/index/: bloom.rs  bm25.rs  hnsw.rs  minhash.rs  mod.rs  store.rs
src/search/: mod.rs  pipeline.rs  qubo.rs
tests/: index_excludes_vendor_dirs.rs  p95_gate.rs  pipeline_invariants.rs  select_restricts_candidates.rs  semantic_quality.rs
tests/fixtures/: golden_corpus.tsv
