[package]
name = "rpgrep"
version = "0.1.0"
edition = "2021"
authors = ["Kerwit"]
description = "Búsqueda probabilística de código sin modelos de lenguaje (Xor + BM25 + MinHash + QUBO)"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
# Filtros probabilísticos
xorf = { version = "0.11", features = ["serde"] }

# Optimización Ising/QUBO (puro Rust, sin deps externas pesadas)
rand = "0.8"
rand_distr = "0.4"
rayon = "1"

# Persistencia
serde = { version = "1", features = ["derive"] }
bincode = "1"                                # bloque bloom (Xor8 no impl rkyv en xorf 0.11)
memmap2 = "0.9"                              # mmap del .idx en load
rkyv = "0.8"                                 # archive zero-copy de chunks/bm25/minhash

# CLI
clap = { version = "4", features = ["derive"] }

# Infraestructura
anyhow = "1"
thiserror = "1"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
rand_chacha = "0.3"

[lib]
name = "rpgrep"
path = "src/lib.rs"

[[bin]]
name = "rpgrep"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[[bench]]
name = "pipeline"
harness = false
