[package]
name = "rpgrep"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"  # piso de lib+bin (rand/bincode); criterion (dev) exige 1.86
authors = ["Kerwit"]
description = "Búsqueda probabilística de código sin modelos de lenguaje (Xor + BM25 + MinHash + QUBO)"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
# Filtros probabilísticos
xorf = { version = "0.12", features = ["serde"] }

# Optimización Ising/QUBO (puro Rust, sin deps externas pesadas)
rand = "0.10"
rand_distr = "0.6"
rayon = "1.12"

# Persistencia
serde = { version = "1.0.228", features = ["derive"] }
memmap2 = "0.9.10"                           # mmap del .idx en load
rkyv = "0.8.16"                              # archive del payload completo (formato RPGRP003)

# Segmentación AST (excepción explícita R1: parsers determinísticos
# generados desde grammars DSL — no son modelos pre-entrenados ni
# requieren red. Runtime C ligero, build-script compila parsers
# desde fuentes de los crates oficiales).
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-dart = "0.2"
tree-sitter-c = "0.24"
tree-sitter-typescript = "0.23"

# CLI
clap = { version = "4.6.1", features = ["derive"] }

# Watch (modo `rpgrep watch`)
notify-debouncer-mini = "0.7"                # batched fs events sobre `notify`

# Serve (modo `rpgrep serve`)
serde_json = "1.0.150"                       # wire JSON sobre Unix socket

# Infraestructura
anyhow = "1.0.102"
thiserror = "2"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.27"
criterion = { version = "0.8", features = ["html_reports"] }
rand_chacha = "0.10"
bincode = { version = "2", features = ["serde"] }  # baseline histórico v0.1 en benches/pipeline.rs::bench_load (3.0 es tombstone)

[lib]
name = "rpgrep"
path = "src/lib.rs"

[[bin]]
name = "rpgrep"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[[bench]]
name = "pipeline"
harness = false
